After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 698807 - osx_audio: miscellaneous improvements
osx_audio: miscellaneous improvements
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.x
Other Mac OS
: Normal normal
: 1.1.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-25 00:41 UTC by Todd Agulnick
Modified: 2013-04-25 07:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
remove vestigial code (1.02 KB, patch)
2013-04-25 00:44 UTC, Todd Agulnick
committed Details | Review
use gst_audio_channel_positions_to_mask to create mask (2.94 KB, application/octet-stream)
2013-04-25 00:45 UTC, Todd Agulnick
  Details
use gst_audio_channel_positions_to_mask to create mask (2.94 KB, patch)
2013-04-25 00:47 UTC, Todd Agulnick
committed Details | Review

Description Todd Agulnick 2013-04-25 00:41:37 UTC
This is a catch-all for a handful of improvements to the osx_audio element, and is in follow-up to
bug 697103.

Patches to come.
Comment 1 Todd Agulnick 2013-04-25 00:44:31 UTC
Created attachment 242383 [details] [review]
remove vestigial code

These bits got left behind during the port to 1.0.
Comment 2 Todd Agulnick 2013-04-25 00:45:30 UTC
Created attachment 242384 [details]
use gst_audio_channel_positions_to_mask to create mask
Comment 3 Todd Agulnick 2013-04-25 00:47:11 UTC
Created attachment 242385 [details] [review]
use gst_audio_channel_positions_to_mask to create mask

(forgot to indicate this is a patch)
Comment 4 Sebastian Dröge (slomo) 2013-04-25 07:57:59 UTC
commit a30634a24850bd413781b829c0571e4eb18c4f61
Author: Todd Agulnick <todd@agulnick.com>
Date:   Wed Apr 17 16:47:31 2013 -0700

    osxaudio: Use gst_audio_channel_positions_to_mask() to create mask
    
    https://bugzilla.gnome.org/show_bug.cgi?id=698807

commit e7710c265523c51e97ffab9f5aa1cbc0782bdabb
Author: Todd Agulnick <todd@agulnick.com>
Date:   Wed Apr 17 16:12:26 2013 -0700

    osxaudio: Remove unused code