osxaudio: Use gst_audio_channel_positions_to_mask() to create mask

https://bugzilla.gnome.org/show_bug.cgi?id=698807